--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,11 +103,13 @@ dependencies {
     }
     compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
     // 调用第三方封装的写法
-    compile ('com.tsy:myokhttp:1.1.3'){
+    compile('com.tsy:myokhttp:1.1.3') {
         exclude module: 'com.android.support:appcompat-v7'
         exclude module: 'com.squareup.okhttp3:okhttp'
         exclude module: 'com.squareup.okhttp3:logging-interceptor'
         exclude module: 'com.google.code.gson:gson'
         exclude module: 'com.squareup.okio:okio'
     }
+    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'io.reactivex:rxjava:1.3.0'
 }
