网路请求添加成功，准备Rxjava

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,10 @@
             android:name="com.mao.cn.learnDevelopProject.ui.activity.NetWorkRequestActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait" />
+        <activity
+            android:name="com.mao.cn.learnDevelopProject.ui.activity.RxJavaLearnActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait" />
 
     </application>
 
