--- a/app/build.gradle
+++ b/app/build.gradle
@@ -112,4 +112,5 @@ dependencies {
     }
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.3.0'
+    compile 'com.beetstra.jutf7:jutf7:1.0.0'
 }
