--- a/gradle.properties
+++ b/gradle.properties
@@ -20,7 +20,7 @@ org.gradle.jvmargs=-Xmx1536m
 market=flavors.gradle
 
 KEYSTORE_PASSWORD=123456
-KEY_ALIAS=mvp
+KEY_ALIAS=learnDevelop
 KEY_PASSWORD=123456
 
 COMPILE_SDK_VERSION=24
