--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,7 +88,6 @@ dependencies {
     compile 'com.trello:rxlifecycle-components:0.5.0'
     compile 'com.squareup:otto:1.3.8'
     compile 'com.facebook.fresco:fresco:0.8.1'
-    compile 'com.orhanobut:logger:2.1.1'
     compile 'com.squareup.retrofit2:retrofit:2.0.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0'
@@ -114,4 +113,5 @@ dependencies {
     compile 'io.reactivex:rxjava:1.3.0'
     compile 'com.beetstra.jutf7:jutf7:1.0.0'
     compile project(':assets')
+    compile 'com.tbruyelle.rxpermissions:rxpermissions:0.9.4@aar'
 }
