--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,7 @@ android {
     defaultConfig {
         applicationId "com.mao.cn.learnDevelopProject"
         minSdkVersion 19
-        targetSdkVersion 26
+        targetSdkVersion 25
         versionCode VERSION_CODE as Integer
         versionName VERSION_NAME as String
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -96,11 +96,11 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
     compile 'com.squareup.okhttp3:okhttp-urlconnection:3.4.1'
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
-    compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
+    compile 'com.android.support:appcompat-v7:25.3.1'
     compile('com.jakewharton.rxbinding:rxbinding-recyclerview-v7:0.4.0') {
         exclude module: 'com.android.support:recyclerview-v7'
     }
-    compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
     // 调用第三方封装的写法
     compile('com.tsy:myokhttp:1.1.3') {
         exclude module: 'com.android.support:appcompat-v7'
@@ -114,5 +114,7 @@ dependencies {
     compile 'com.beetstra.jutf7:jutf7:1.0.0'
     compile project(':assets')
     compile 'com.tbruyelle.rxpermissions:rxpermissions:0.9.4@aar'
-    compile 'com.android.support:design:26.0.0-alpha1'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:support-dynamic-animation:25.3.1'
+    compile 'com.facebook.rebound:rebound:0.3.8'
 }
