动画结束，准备自定义view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -80,12 +80,16 @@
             android:name="com.mao.cn.learnDevelopProject.ui.activity.AnimatorActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait" />
+
         <activity
             android:name="com.mao.cn.learnDevelopProject.ui.activity.FancyCoverFlowActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait" />
 
-
+        <activity
+            android:name="com.mao.cn.learnDevelopProject.ui.activity.DefineViewActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait" />
 
     </application>
 
