--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,6 @@
 apply plugin: 'com.android.application'
-apply plugin: 'me.tatarka.retrolambda'
-
-apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'packer'
+
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -22,7 +20,7 @@ android {
     defaultConfig {
         applicationId "com.mao.cn.learnDevelopProject"
         minSdkVersion 19
-        targetSdkVersion 25
+        targetSdkVersion rootProject.ext.compileSdkVersion
         versionCode VERSION_CODE as Integer
         versionName VERSION_NAME as String
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -65,70 +63,70 @@ android {
         }
     }
 
-    retrolambda {
-        jvmArgs '-noverify'
-    }
-    compileOptions {
-        targetCompatibility JavaVersion.VERSION_1_8
-        sourceCompatibility JavaVersion.VERSION_1_8
-    }
     sourceSets{
         main{
             jniLibs.srcDirs = ['libs']
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
-    compile 'com.jakewharton:butterknife:8.0.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.1'
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.jakewharton:butterknife:8.8.1'
     // apt 很重要
-    apt 'com.jakewharton:butterknife-compiler:8.0.1'
-    compile 'com.mcxiaoke.gradle:packer-helper:1.0.2'
-    compile 'com.google.dagger:dagger:2.0.2'
-    apt 'com.google.dagger:dagger-compiler:2.0.1'
-    compile 'com.trello:rxlifecycle:0.5.0'
-    compile 'com.trello:rxlifecycle-components:0.5.0'
-    compile 'com.squareup:otto:1.3.8'
-    compile 'com.facebook.fresco:fresco:0.8.1'
-    compile 'com.squareup.retrofit2:retrofit:2.0.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.0.0'
-    compile 'com.mcxiaoke.gradle:packer-helper:1.0.2'
-    compile 'com.squareup.okio:okio:1.4.0'
-    compile 'com.squareup.okhttp3:okhttp:3.4.1'
-    compile 'com.squareup.okhttp3:okhttp-urlconnection:3.4.1'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile('com.jakewharton.rxbinding:rxbinding-recyclerview-v7:0.4.0') {
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation 'com.mcxiaoke.gradle:packer-helper:1.0.9'
+    implementation 'com.google.dagger:dagger:2.11'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
+    implementation 'com.trello:rxlifecycle:0.8.0'
+    implementation 'com.trello:rxlifecycle-components:0.8.0'
+    implementation 'com.squareup:otto:1.3.8'
+    implementation 'com.facebook.fresco:fresco:0.14.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.mcxiaoke.gradle:packer-helper:1.0.9'
+    implementation 'com.squareup.okio:okio:1.14.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation 'com.squareup.okhttp3:okhttp-urlconnection:3.9.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation('com.jakewharton.rxbinding:rxbinding-recyclerview-v7:0.4.0') {
         exclude module: 'com.android.support:recyclerview-v7'
     }
-    compile 'com.android.support:recyclerview-v7:25.3.1'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.tsy:myokhttp:1.1.4'
     // 调用第三方封装的写法
-    compile('com.tsy:myokhttp:1.1.3') {
+   /* implementation('com.tsy:myokhttp:1.1.3') {
         exclude module: 'com.android.support:appcompat-v7'
         exclude module: 'com.squareup.okhttp3:okhttp'
         exclude module: 'com.squareup.okhttp3:logging-interceptor'
         exclude module: 'com.google.code.gson:gson'
         exclude module: 'com.squareup.okio:okio'
-    }
-    compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'io.reactivex:rxjava:1.3.0'
-    compile 'com.beetstra.jutf7:jutf7:1.0.0'
-    compile project(':assets')
-    compile 'com.tbruyelle.rxpermissions:rxpermissions:0.9.4@aar'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support:support-dynamic-animation:25.3.1'
-    compile 'com.facebook.rebound:rebound:0.3.8'
-    compile files('libs/YoudaoBase.jar')
-    compile files('libs/YoudaoCnDictOffline.jar')
-    compile files('libs/YoudaoLineOffline.jar')
-    compile files('libs/YoudaoTranslateOnline.jar')
-    compile files('libs/YoudaoWordOffline.jar')
-    compile 'com.skyfishjy.ripplebackground:library:1.0.1'
+    }*/
+    implementation 'io.reactivex:rxandroid:1.2.1'
+    implementation 'io.reactivex:rxjava:1.3.6'
+    implementation 'com.beetstra.jutf7:jutf7:1.0.0'
+    implementation project(':assets')
+    implementation 'com.tbruyelle.rxpermissions:rxpermissions:0.9.4@aar'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:support-dynamic-animation:27.1.1'
+    implementation 'com.facebook.rebound:rebound:0.3.8'
+    implementation files('libs/YoudaoBase.jar')
+    implementation files('libs/YoudaoCnDictOffline.jar')
+    implementation files('libs/YoudaoLineOffline.jar')
+    implementation files('libs/YoudaoTranslateOnline.jar')
+    implementation files('libs/YoudaoWordOffline.jar')
+    implementation 'com.skyfishjy.ripplebackground:library:1.0.1'
+    // https://mvnrepository.com/artifact/com.nineoldandroids/library
+    implementation files('libs/library-2.4.0.jar')
 }
