--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,8 +63,8 @@ android {
         }
     }
 
-    sourceSets{
-        main{
+    sourceSets {
+        main {
             jniLibs.srcDirs = ['libs']
         }
     }
@@ -76,6 +76,7 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support:support-v4:27.1.1'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -106,7 +107,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.tsy:myokhttp:1.1.4'
     // 调用第三方封装的写法
-   /* implementation('com.tsy:myokhttp:1.1.3') {
+    /* implementation('com.tsy:myokhttp:1.1.3') {
         exclude module: 'com.android.support:appcompat-v7'
         exclude module: 'com.squareup.okhttp3:okhttp'
         exclude module: 'com.squareup.okhttp3:logging-interceptor'
