--- a/app/build.gradle
+++ b/app/build.gradle
@@ -131,4 +131,5 @@ dependencies {
     // https://mvnrepository.com/artifact/com.nineoldandroids/library
     implementation files('libs/library-2.4.0.jar')
     implementation 'com.ashokvarma.android:bottom-navigation-bar:2.0.4'
+    implementation 'com.hwangjr.rxbus:rxbus:1.0.6'
 }
