--- a/app/build.gradle
+++ b/app/build.gradle
@@ -118,7 +118,7 @@ dependencies {
     implementation 'io.reactivex:rxjava:1.3.6'
     implementation 'com.beetstra.jutf7:jutf7:1.0.0'
     implementation project(':assets')
-    implementation 'com.tbruyelle.rxpermissions:rxpermissions:0.9.4@aar'
+    implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:support-dynamic-animation:27.1.1'
     implementation 'com.facebook.rebound:rebound:0.3.8'
