--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
 
     defaultConfig {
         applicationId "com.mao.cn.learnDevelopProject"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion rootProject.ext.compileSdkVersion
         versionCode VERSION_CODE as Integer
         versionName VERSION_NAME as String
@@ -76,11 +76,11 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.support:support-v4:28.0.0'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'com.android.support.constraint:constraint-layout:1.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     implementation 'com.jakewharton:butterknife:8.8.1'
     // apt 很重要
@@ -100,11 +100,11 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation 'com.squareup.okhttp3:okhttp-urlconnection:3.9.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
-    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation('com.jakewharton.rxbinding:rxbinding-recyclerview-v7:0.4.0') {
         exclude module: 'com.android.support:recyclerview-v7'
     }
-    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.tsy:myokhttp:1.1.4'
     // 调用第三方封装的写法
     /* implementation('com.tsy:myokhttp:1.1.3') {
@@ -117,10 +117,9 @@ dependencies {
     implementation 'io.reactivex:rxandroid:1.2.1'
     implementation 'io.reactivex:rxjava:1.3.6'
     implementation 'com.beetstra.jutf7:jutf7:1.0.0'
-    implementation project(':assets')
     implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
-    implementation 'com.android.support:design:27.1.1'
-    implementation 'com.android.support:support-dynamic-animation:27.1.1'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:support-dynamic-animation:28.0.0'
     implementation 'com.facebook.rebound:rebound:0.3.8'
     implementation files('libs/YoudaoBase.jar')
     implementation files('libs/YoudaoCnDictOffline.jar')
@@ -132,4 +131,5 @@ dependencies {
     implementation files('libs/library-2.4.0.jar')
     implementation 'com.ashokvarma.android:bottom-navigation-bar:2.0.4'
     implementation 'com.hwangjr.rxbus:rxbus:1.0.6'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
 }
