显示收缩和

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -141,4 +141,6 @@ dependencies {
     implementation 'com.jude:easyrecyclerview:4.4.2'
     // 状态栏沉浸：https://github.com/gyf-dev/ImmersionBar
     implementation 'com.gyf.barlibrary:barlibrary:2.3.0'
+    //现类似微博内容，@用户，链接高亮，@用户和链接可点击跳转，可展开和收回的TextView
+    implementation 'com.github.MZCretin:ExpandableTextView:v1.5.2'
 }
