--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -175,6 +175,11 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait" />
 
+        <activity
+            android:name=".ui.activity.HtmlActivity"
+            android:screenOrientation="portrait"/>
+
+
     </application>
 
 </manifest>
