--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,10 +27,10 @@
     <application
         android:name=".LearnDevelopApplication"
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:resizeableActivity="true"
-        android:hardwareAccelerated="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
@@ -139,9 +139,15 @@
         <activity
             android:name=".ui.activity.DataBindingExpressionActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:screenOrientation="portrait" /> 
+            android:screenOrientation="portrait" />
+
         <activity
             android:name=".ui.activity.DataBindingLambdaActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".ui.activity.DataBindingAnimationActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait" />
 
@@ -189,11 +195,11 @@
 
         <activity
             android:name=".ui.activity.HtmlActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
 
         <activity
             android:name=".ui.activity.HtmlQbActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
 
 
     </application>
