lifecycle  room  insert 更新

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,8 +92,8 @@ dependencies {
     implementation 'com.mcxiaoke.gradle:packer-helper:1.0.9'
     implementation 'com.google.dagger:dagger:2.16'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.16'
-    implementation 'com.trello:rxlifecycle:0.8.0'
-    implementation 'com.trello:rxlifecycle-components:0.8.0'
+    implementation 'com.trello:rxlifecycle:1.0'
+    implementation 'com.trello:rxlifecycle-components:1.0'
     implementation 'com.squareup:otto:1.3.8'
     implementation 'com.facebook.fresco:fresco:0.14.1'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
@@ -109,6 +109,7 @@ dependencies {
         exclude module: 'com.android.support:recyclerview-v7'
     }
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.tsy:myokhttp:1.1.4'
     // 调用第三方封装的写法
     /* implementation('com.tsy:myokhttp:1.1.3') {
