--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,9 +96,6 @@ dependencies {
     implementation 'com.trello:rxlifecycle-components:1.0'
     implementation 'com.squareup:otto:1.3.8'
     implementation 'com.facebook.fresco:fresco:0.14.1'
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava:2.4.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.mcxiaoke.gradle:packer-helper:1.0.9'
     implementation 'com.squareup.okio:okio:1.14.0'
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
@@ -119,8 +116,6 @@ dependencies {
         exclude module: 'com.google.code.gson:gson'
         exclude module: 'com.squareup.okio:okio'
     }*/
-    implementation 'io.reactivex:rxandroid:1.2.1'
-    implementation 'io.reactivex:rxjava:1.3.6'
     implementation 'com.beetstra.jutf7:jutf7:1.0.0'
     implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
     implementation 'com.android.support:design:28.0.0'
@@ -160,5 +155,14 @@ dependencies {
     implementation "android.arch.persistence.room:runtime:$roomVersion"
     annotationProcessor "android.arch.persistence.room:compiler:$roomVersion"
     androidTestImplementation "android.arch.persistence.room:testing:$roomVersion"
+
+
+    implementation 'io.reactivex:rxandroid:1.2.1'
+    implementation 'io.reactivex:rxjava:1.3.6'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.4.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava:2.4.0'
+
 
 }
