--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -186,6 +186,11 @@
             android:label="@string/title_activity_jet_pack_edit"
             android:theme="@style/AppTheme.NoActionBar" />
 
+        <activity
+            android:name=".ui.activity.retrofitdemo.RetrofitDemoActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:theme="@style/AppTheme.NoActionBar" />
+
         <service
             android:name=".utils.x5.PreLoadX5Service"
             android:label="dexopt"
