--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,9 @@ buildscript {
     ext.roomVersion = "1.1.1"
 
     repositories {
+        /*maven{ url'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven{ url'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
+        mavenCentral()*/
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
@@ -21,6 +24,9 @@ buildscript {
 
 allprojects {
     repositories {
+       /* maven{ url'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven{ url'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
+        mavenCentral()*/
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
